public/stylesheets/user-prof.css
.container-fluid{
  position: fixed;
  z-index: 1;
}
.page-container{
  width: 100%;
  margin: 0;
  padding: 0;
  background-color: rgb(41, 42, 45);
}
.menubar{
  z-index: 2;
}

.btn-outline-info{
  padding: 2px;
}

.div-block {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    height: 90vh;
    min-height: 90vh;
    margin-top: 40px;
    padding-bottom: 30px; 
  }
  .avatar {
    width: 35px;
  }

  

  .user-info-div {
    display:-webkit-box;
    display:-ms-flexbox;
    display:flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    width: 30%;
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
    background-color: #363538;
    text-align: center;
  }
  .memberSince{
    padding-top:20px; 
    display: inline-block;
    margin-top: auto;
    color:#eeee;
  }
  
  .user-post-cont {
    overflow: scroll;
    width: 70%;
    border-style: solid;
    border-width: 1px;
    border-color: #000000;
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
    -webkit-box-shadow: inset 0 0 11px -20px #000;
            box-shadow: inset 0 0 11px -20px #000;
    background-color: rgb(44, 44, 43);

  }
  .user-no-posts{
    width: 100%;
    height: 100%;
    padding-top: 50px;
    padding-bottom: 50px;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    color: #eeee;
  }
  
  .user-img-cont {
    display: inline-block;
    overflow: hidden;
    width: 100px;
    height: 100px;
    margin-top: 10px;
    border-radius: 49%;
    -webkit-box-shadow: 1px 1px 2px 2px #1f1e1e;
            box-shadow: 1px 1px 2px 2px #1f1e1e;
    }

  .user-img-avatar{
    
    width: 100px;
    height: 100px;
  }
  
  .user-info-cont {
    display: inline-block;
    width: 90%;
    color: #eeee;

  }
  
  .user-name {
    margin-bottom: 0px;
    font-size: 25px;
    line-height: 31px;
  }


  
  
  .user-location {
    display: inline-block;
    margin-top: 0px;
    font-size: 14px;
    line-height: 20px;
  }

  

  
  
  .popular-posts-container {
    display: block;
    width: 95%;
    height: auto;
    margin-top: 15px;
    margin-left: 20px;
    -webkit-align-self: auto;
    -ms-flex-item-align: auto;
    -ms-grid-row-align: auto;
    align-self: auto;
    -webkit-box-flex: 0;
    -ms-flex: 0 auto;
    flex: 0 auto;
  }
  .fa-facebook{
      color: #074377;
  }
  
 

  .fa-instagram{
      color:#C13584;
  }


  .popular-item-container-img {
    position: relative;
    overflow: hidden;
    width: 50%;
    height: 250px;
    -webkit-box-flex: 0;
    -ms-flex: 0 auto;
    flex: 0 auto;
  }
  
  
  
  
  .category-title {
  
    display: inline-block;
    margin-top: 0px;
    margin-bottom: 0px;
    font-size: 25px;
    line-height: 28px;
  }
  
  .categori-description-block {
    color: #eeee;
    width: 65%;
    margin-left: 10px;
    -webkit-align-self: auto;
    -ms-flex-item-align: auto;
    -ms-grid-row-align: auto;
    align-self: auto;
    -webkit-box-flex: 0;
    -ms-flex: 0 0 auto;
    flex: 0 0 auto;
    
  }


  
  .popular-item-container {
    position:relative;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    overflow: hidden;
    width: 100%;
    height: auto;
    margin-bottom: 10px;
    -webkit-box-pack: start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    border-radius: 10px;
    
  }

  .mobile-setting-items{
    background-color:rgb(61, 61, 61);
    color: rgb(255, 255, 255); 
  }

  .item{
    color: white;
  }
  
  .popular-item-container:hover {
    -webkit-box-shadow: 1px 1px 3px 0 #000;
            box-shadow: 1px 1px 3px 0 #000;
  }



  
  .category-description {
    display: block;
    width: 100%;
    font-size: 14px;
  }
  
  .search-tag {
    margin: 0px 5px;
    color: #fff;
    font-size: 12px;
    line-height: 20px;
  }
  
  .image-2 {
    width: 100%;
    height: 100%;
    -o-object-fit: cover;
    object-fit: cover;
  }
  
  .heading-7 {
    display: inline-block;
    margin-top: 0px;
    margin-bottom: 0px;
    font-size: 20px;
    line-height: 20px;
  }
  
  .user-social-media-cont {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
  
  .user-title {
    color:#eeee;
    margin-bottom: 10px;
  }
  
  .user-prof-container {
    padding-top: 50px; 
    margin-right: 20px;
    margin-left: 20px;
  }
  
  .div-block-9 {
    margin-top: 20px;
  }
  
a{
    text-decoration: none;
    color: inherit;
}

a:hover{

    text-decoration: none;
    color: inherit;
}

  .social-btns{
    padding-bottom: 20px;
  }


  .category-tag-waterfall {
    position: absolute;
    right: 1px;
    margin: 5px 5px 5px 0px;
    background-color: #4a7fe9;
  }
  
  .category-tag-forest {
    position: absolute;
    left: auto;
    top: 0%;
    right: 0%;
    bottom: auto;
    padding: 3px 5px;
    background-color: #0f9423;
  }
  
  .category-tag-forest:hover {
  
    background-color: #076b16;
  }
  
  .category-tag-island {

    position: absolute;
    left: auto;
    top: 0%;
    right: 0%;
    bottom: auto;
    padding: 3px 5px;
    background-color: #8829c4;
  }
  
  
  .category-tag-waterfall {
    margin: 0;
    position: absolute;
    left: auto;
    top: 0%;
    right: 0%;
    bottom: auto;
    padding: 3px 5px;
    background-color: #1361a5;
  }
  
  .category-tag-waterfall:hover {
    background-color: #074377;
  }
  
  .category-tag-beach {
    position: absolute;
    left: auto;
    top: 0%;
    right: 0%;
    bottom: auto;
    padding: 3px 5px;
    background-color: #928017;
  }
  
  .category-tag-city {
    position: absolute;
    left: auto;
    top: 0%;
    right: 0%;
    bottom: auto;
    padding: 3px 5px;
    background-color: #e00ea8;
  }
  
  .category-tag-city:hover {
    background-color: #a30c7b;
  }
  
  .category-tag-mountain {
    position: absolute;
    left: auto;
    top: 0%;
    right: 0%;
    bottom: auto;
    padding: 3px 5px;
    background-color: #e94a4a;
  }
  
  .category-tag-mountain:hover {
    background-color: #b42121;
  }
  
  .category-tag-lake {
    position: absolute;
    left: auto;
    top: 0%;
    right: 0%;
    bottom: auto;
    padding: 3px 5px;
    background-color: #0799af;
  }
  
  .category-tag-lake:hover {
    background-color: #056b7a;
  }

  .mobile-settings{
    position:absolute;
    margin-left: 5px;
    margin-top: 5px;
    

  }

  .fa-cog{
    color: rgb(255, 251, 251);
    text-shadow: 2px 2px 2px rgb(0, 0, 0);
  }
  
  .user-text-info {
    width: 100%;
    word-wrap: break-word;
    margin-top: 5px;
    color: rgba(204, 203, 203, 0.933);
  }
  
  .user-places-cont {
    display: inline-block;
    width: 90%;
    -ms-flex-pack: distribute;
    justify-content: space-around;
    text-align: left;
  }
  
  .user-social-fb {
    width: 40px;
    height: 40px;
    margin-right: 5px;
    background-color: #375da0;
  }
  
  .user-social-insta {
    width: 40px;
    height: 40px;
    margin-right: 5px;
    background-color: #44a055;
  }
  
  .user-social-linked {
    width: 40px;
    height: 40px;
    background-color: #f08731;
  }
  
  .data-text {
    display: inline;
    margin-top: 10px;
    color: #eeee;
    font-size: 15px;
    line-height: 21px;
  }
  
  .user-email-cont {
    display: block;
    margin-top: 15px;
    text-align: center;
  }
  
  .div-block-17 {
    margin-top: 10px;
  }
  
  .user-email {
    display: inline-block;
    margin-top: 0px;
    color: #eeee;
    font-size: 14px;
    line-height: 20px;
  }
  
  .user-places-data {
    display: block;
    margin-top: 20px;
    margin-bottom: 0px;
    color: #eeee;
  }
  
  .and-more {
    display: inline-block;
    color: rgb(8, 144, 168);
    padding: 2px;
    font-size: 15px;
    line-height: 21px;
    
  }
  
  .user-frame {
    width: 90%;
    margin-right: auto;
    margin-left: auto;
    border-radius: 5px;
    background-color: rgb(44,44,43);
  }
  
  @media screen and (max-width: 991px) {
    .div-block {
      height: auto;
     
    }

  
    .user-info-div{
      display: inline-block;
      width: 50%;
      height: auto;
    }

    .category-description {
      display: block;
    }
    .user-post-cont {
      width: 100%;
      overflow: auto;
    }
    .popular-posts-container {
      margin-right: auto;
      margin-left: auto;
      
    }
    .popular-item-container-img {
      display: block;
      width: auto;
      height: 250px;
    }
    .categori-description-block {
      margin-right: auto;
      margin-left: auto;
      text-align: center;
    }
    .popular-item-container {
      display: block;
      width: 100%;
      height: auto;
      margin-bottom: 45px;
      -ms-flex-wrap: nowrap;
      flex-wrap: nowrap;
    }
  }

  .avatar {
    width: 35px;
  }
  @media screen and (max-width: 767px) {
    .div-block {
      -webkit-box-orient: vertical;
      -webkit-box-direction: normal;
          -ms-flex-direction: column;
              flex-direction: column;
      padding-top: 0px;
    }
    
    .user-info-div {
      width: 100%;
      height: auto;
      padding-top: 5px;
    }
    
    .category-description {
      margin-bottom: 10px;
    }
    .image-2 {
      width: 100%;
      height: 250px;
      -o-object-fit: cover;
      object-fit: cover;
    }
    .user-prof-container {
      margin-right: 0px;
      margin-left: 0px;
    }
  }

  
  
  @media screen and (max-width: 479px) {
    .popular-item-container-img {
      width: 100%;
      height: 200px;
    }
    .categori-description-block {
      width: 90%;
      margin-top: 10px;
      margin-left: 0px;
    }
    .popular-item-container {
      margin-bottom: 35px;
      -webkit-box-pack: center;
      -ms-flex-pack: center;
      justify-content: center;
      -ms-flex-wrap: wrap;
      flex-wrap: wrap;
    }
  }

